syntax = "proto3";
option go_package = "/pb";

import "google/protobuf/empty.proto";

service ShopCarService {
  //购物车列表
  rpc ShopCartItemList(AccountReq) returns(CartItemListRes);
  //添加购物车
  rpc AddShopCarItem(ShopCartReq) returns (CarItemRes);
  //更新购物车
  rpc UpdateShopCartItem(ShopCartReq) returns (google.protobuf.Empty);
  //删除购物车内的一个产品
  rpc DeleteShopCartItem (DelShopCartItem) returns (google.protobuf.Empty);

}

message DelShopCartItem {
  int32 accountId = 1;
  int32 productId = 2;
}

message ShopCartReq {
  int32 id = 1;
  int32 accountId = 2;
  int32 ProductId = 3;
  int32 num = 4 ;
  bool checked = 5;
}



message CartItemListRes{
  int32 total = 1 ;
  repeated CarItemRes itemList = 2;

}

message CarItemRes {
  int32 id = 1;
  int32 accountId = 2 ;
  int32 ProductId = 3;
  int32 num = 4;
  bool checked = 5;
}



message AccountReq {
  int32 accountId = 1;
}